# BlueArchiveGM

./: Announcement.json  LICENSE  README.md  app.js  index.html  main.cjs  package-lock.json  package.json  preload.js  vite.config.js
.github/workflows/: tauri-build.yml
electron/: main.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: convert_icons.py
src/assets/: currency.json  documentation-tips.css  equipment.json  furniture.json  items.json  students.json  styles.css
src/assets/css/: styles.css
src/assets/json/configmaker/: ArenaNPC.json  Attendance.json  ProdIndex.json  RaidEliminateSchedule.json  RaidSchedule.json  StrategyMap.json
src/assets/json/id/: currency.json  furniture.json  items.json  students.json
src/components/: Announcement.vue  GithubButton.vue  ProtoTable.vue  Sidebar.vue  TopNavBar.vue
src/locales/: en-us.json  ja-jp.json  ko-kr.json  zh-cn.json  zh-hk.json  zh-tw.json
src/proto/: bin.server.proto
src/router/: index.js
src/utils/: api.js
src/views/: About.vue  Account.vue  Character.vue  Command.vue  ConfigMaker.vue  GameMail.vue  GameSetting.vue  GetEmailCode.vue  GetPlayer.vue  Give.vue  GiveAll.vue  Home.vue  IdList.vue  ItemList.vue  Mail.vue  MailCode.vue
src/views/abandon/: GetEmailCode.vue  Give.vue
