[package]
name = "BlueArchiveGM"
version = "1.0.0"
description = "A BlueArchiveGM tool based on Baps API"
authors = ["KitanoSakura"]
license = "MIT"
repository = "https://github.com/PrimeStudentCouncil/BlueArchiveGM"
edition = "2024"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
